--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -14,6 +14,10 @@ nav{
     justify-content: space-between;
     margin: 0 200px;
 }
+/* shared style */
+.secondary-bg{
+    background-color:#FFF8F3;
+}
 .dark-2{
     color: #474747;
 }
@@ -25,6 +29,15 @@ nav{
     padding: 18px 35px;
     border: none;
     border-radius: 5px;
+}
+.section-tittle{
+    font-size: 35px;
+    font-weight: bold;
+    color:#181818 ;
+}
+.section-description{
+    font-size: 18px;
+    color: #757575;
 }
 .header{
     background-image: url('../images/developer.png'),url('../images/header_bg.png');
@@ -68,4 +81,32 @@ nav li a {
 }
 .banner-content{
     min-width: 580px;
+}
+main{
+    max-width:1140px ;
+    margin: 0 auto;
+}
+main section{
+    margin-top: 130px;
+    margin-bottom: 130px;
+}
+.about{
+    border-radius: 10px;
+    padding: 130px 150px;
+    text-align: center;
+}
+.about-items{
+    display: flex;
+    justify-content: space-around;
+}
+.item-description{
+    font-weight: 600;
+}
+.skill-container{
+    display: flex;
+    gap: 24px;
+}
+skill{
+    padding: 30px;
+    box-shadow: 0 6px 50px 0 rgba(0,0,0,0.06);
 }
