--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -30,6 +30,9 @@ nav{
     border: none;
     border-radius: 5px;
 }
+.text-center{
+    text-align: center;
+}
 .section-tittle{
     font-size: 35px;
     font-weight: bold;
@@ -109,4 +112,38 @@ main section{
 skill{
     padding: 30px;
     box-shadow: 0 6px 50px 0 rgba(0,0,0,0.06);
+}
+.resume-container{
+    display: flex;
+    gap: 24px;
+}
+.experience-sub-tittle{
+    font-size: 20px;
+    font-weight: 600;
+    margin-bottom: 20px;
+}
+.experience-description,.experience-sub-tittle{
+    color: #757575;
+}
+.resume-download-btn{
+    text-align: center;
+    margin-top: 50px;
+}
+footer{
+    padding: 130px 230px;
+    display: flex;
+    gap: 100px;
+}
+.footer-colume{
+    width: 50%;
+}
+footer input[type="text"],footer input[type="email"],footer textarea{
+    height: 64px;
+    border-radius: 5px;
+    background-color: white;
+    display: block;
+    width: 100%;
+    padding: 10px 20px;
+    margin-bottom: 24px;
+    border: none;
 }
