--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -147,3 +147,34 @@ footer input[type="text"],footer input[type="email"],footer textarea{
     margin-bottom: 24px;
     border: none;
 }
+
+/* media query */
+@media screen and (max-width:576px) {
+    .skill-container,.resume-container,footer,.about-items,.banner,nav,nav>ul{
+        flex-direction:column;
+    }
+    nav>ul{
+        gap:20px;
+    }
+    .btn-primary{
+        margin-bottom: 20px;
+    }
+    footer,.about{
+        padding: 20px;
+    }
+    .banner{
+        margin: 20px;
+    }
+    .banner-profile-picture{
+        width: 100%;
+    }
+    .header{
+        background-image: none;
+    }
+    .footer-colume{
+        width: 100%;
+    }
+    footer input[type="text"],footer input[type="email"],footer textarea{
+        width: calc(100% - 40px);
+    }
+}
